<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.carlo.livestocktracker.MainActivity">
    <item
        android:id="@+id/nav_livestock"
        android:icon="@drawable/ic_goat"
        android:title="@string/text_livestock"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_scan"
        android:enabled="true"
        android:icon="@drawable/ic_scan"
        android:title="@string/text_scan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/text_notification"
        app:showAsAction="ifRoom"/>
</menu>
