<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filter_type"/>

    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
        android:id="@+id/filter_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
        <!--app:hintText="Type of livestock" -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filter_breed"/>

    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
        android:id="@+id/filter_breed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
        <!--app:hintText="Breed (e.g. Boer)" -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filter_houseNum"/>

    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
        android:id="@+id/filter_houseNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
        <!--app:hintText="House Number" -->


</LinearLayout>