<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.carlo.livestocktracker.LivestockDetails"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white_tl">

        <ImageView
            android:id="@+id/detail_lstock_photo"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:gravity="center"
            android:src="@drawable/goat410"
            android:scaleType="centerCrop"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/detail_label_eartag_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_eartagnum"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"/>
            <!--android:paddingBottom="3dp"-->
            <!--android:paddingTop="3dp"-->

            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:layout_below="@+id/lstock_photo"-->
        <TextView
            android:id="@+id/detail_label_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_type"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/detail_label_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_breed"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/detail_label_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_weight"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/detail_label_housenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/label_housenum"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn"/>
                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_btn"/>
         </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/detail_field_eartag"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="15sp"-->
            <!--android:text="@string/field_eartagnum"-->
            <!--android:textColor="@color/black"-->
            <!--android:gravity="center"/>-->
        <!--<TextView-->
            <!--android:id="@+id/detail_field_type"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="15sp"-->
            <!--android:text="@string/field_type"-->
            <!--android:textColor="@color/black"-->
            <!--android:gravity="center"/>-->
        <!--<TextView-->
            <!--android:id="@+id/detail_field_breed"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="15sp"-->
            <!--android:text="@string/field_breed"-->
            <!--android:textColor="@color/black"-->
            <!--android:gravity="center"/>-->
        <!--<TextView-->
            <!--android:id="@+id/detail_field_weight"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="15sp"-->
            <!--android:text="@string/field_weight"-->
            <!--android:textColor="@color/black"-->
            <!--android:gravity="center"/>-->
        <!--<TextView-->
            <!--android:id="@+id/detail_field_housenum"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="15sp"-->
            <!--android:text="@string/field_housenum"-->
            <!--android:textColor="@color/black"-->
            <!--android:gravity="center"/>-->


</LinearLayout>